@@ -1,8 +1,8 @@
 package com.dabsquared.gitlabjenkins.publisher;
 
-
 import com.dabsquared.gitlabjenkins.gitlab.api.GitLabClient;
 import com.dabsquared.gitlabjenkins.gitlab.api.model.MergeRequest;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.Extension;
 import hudson.model.AbstractProject;
 import hudson.model.Result;
@@ -11,12 +11,12 @@ import hudson.model.TaskListener;
 import hudson.tasks.BuildStepDescriptor;
 import hudson.tasks.BuildStepMonitor;
 import hudson.tasks.Publisher;
-import org.kohsuke.stapler.DataBoundConstructor;
-
-import javax.ws.rs.ProcessingException;
-import javax.ws.rs.WebApplicationException;
+import jakarta.ws.rs.ProcessingException;
+import jakarta.ws.rs.WebApplicationException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import org.kohsuke.stapler.DataBoundConstructor;
+import org.kohsuke.stapler.DataBoundSetter;
 
 /**
  * @author Robin Müller
@@ -24,8 +24,20 @@ import java.util.logging.Logger;
 public class GitLabAcceptMergeRequestPublisher extends MergeRequestNotifier {
     private static final Logger LOGGER = Logger.getLogger(GitLabAcceptMergeRequestPublisher.class.getName());
 
+    @SuppressFBWarnings("UWF_FIELD_NOT_INITIALIZED_IN_CONSTRUCTOR")
+    private Boolean deleteSourceBranch;
+
     @DataBoundConstructor
-    public GitLabAcceptMergeRequestPublisher() { }
+    public GitLabAcceptMergeRequestPublisher() {}
+
+    @DataBoundSetter
+    public void setDeleteSourceBranch(boolean deleteSourceBranch) {
+        this.deleteSourceBranch = deleteSourceBranch;
+    }
+
+    public boolean isDeleteSourceBranch() {
+        return deleteSourceBranch;
+    }
 
     public BuildStepMonitor getRequiredMonitorService() {
         return BuildStepMonitor.NONE;
@@ -49,11 +61,18 @@ public class GitLabAcceptMergeRequestPublisher extends MergeRequestNotifier {
     protected void perform(Run<?, ?> build, TaskListener listener, GitLabClient client, MergeRequest mergeRequest) {
         try {
             if (build.getResult() == Result.SUCCESS) {
-                client.acceptMergeRequest(mergeRequest, "Merge Request accepted by jenkins build success", false);
+                client.acceptMergeRequest(
+                        mergeRequest, "Merge Request accepted by jenkins build success", this.deleteSourceBranch);
             }
         } catch (WebApplicationException | ProcessingException e) {
-            listener.getLogger().printf("Failed to accept merge request for project '%s': %s%n", mergeRequest.getProjectId(), e.getMessage());
-            LOGGER.log(Level.SEVERE, String.format("Failed to accept merge request for project '%s'", mergeRequest.getProjectId()), e);
+            listener.getLogger()
+                    .printf(
+                            "Failed to accept merge request for project '%s': %s%n",
+                            mergeRequest.getProjectId(), e.getMessage());
+            LOGGER.log(
+                    Level.SEVERE,
+                    "Failed to accept merge request for project '%s'".formatted(mergeRequest.getProjectId()),
+                    e);
         }
     }
 }
