@@ -1,6 +1,5 @@
 package com.dabsquared.gitlabjenkins.publisher;
 
-
 import com.dabsquared.gitlabjenkins.gitlab.api.GitLabClient;
 import com.dabsquared.gitlabjenkins.gitlab.api.model.MergeRequest;
 import hudson.Extension;
@@ -11,17 +10,17 @@ import hudson.model.Run;
 import hudson.model.TaskListener;
 import hudson.tasks.BuildStepDescriptor;
 import hudson.tasks.Publisher;
-import jenkins.model.Jenkins;
-import org.kohsuke.stapler.DataBoundConstructor;
-import org.kohsuke.stapler.DataBoundSetter;
-
-import javax.ws.rs.ProcessingException;
-import javax.ws.rs.WebApplicationException;
+import jakarta.ws.rs.ProcessingException;
+import jakarta.ws.rs.WebApplicationException;
 import java.text.MessageFormat;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import jenkins.model.Jenkins;
+import org.kohsuke.stapler.DataBoundConstructor;
+import org.kohsuke.stapler.DataBoundSetter;
 
 /**
  * @author Nikolay Ustinov
@@ -40,10 +39,27 @@ public class GitLabMessagePublisher extends MergeRequestNotifier {
 
     /**
      * @deprecated use {@link #GitLabMessagePublisher()} with setters to configure an instance of this class.
+     * @param onlyForFailure Option to only post message on failure
+     * @param replaceSuccessNote Option to replace message on success
+     * @param replaceFailureNote Option to replace message on failure
+     * @param replaceAbortNote Option to replace message on abort
+     * @param replaceUnstableNote Option to replace message on unstable
+     * @param successNoteText Text of message for build success
+     * @param failureNoteText Text of message for build failure
+     * @param abortNoteText Text of message for build abort
+     * @param unstableNoteText Text of message for unstable build
      */
     @Deprecated
-    public GitLabMessagePublisher(boolean onlyForFailure, boolean replaceSuccessNote, boolean replaceFailureNote, boolean replaceAbortNote, boolean replaceUnstableNote,
-                                  String successNoteText, String failureNoteText, String abortNoteText, String unstableNoteText) {
+    public GitLabMessagePublisher(
+            boolean onlyForFailure,
+            boolean replaceSuccessNote,
+            boolean replaceFailureNote,
+            boolean replaceAbortNote,
+            boolean replaceUnstableNote,
+            String successNoteText,
+            String failureNoteText,
+            String abortNoteText,
+            String unstableNoteText) {
         this.onlyForFailure = onlyForFailure;
         this.replaceSuccessNote = replaceSuccessNote;
         this.replaceFailureNote = replaceFailureNote;
@@ -56,7 +72,7 @@ public class GitLabMessagePublisher extends MergeRequestNotifier {
     }
 
     @DataBoundConstructor
-    public GitLabMessagePublisher() { }
+    public GitLabMessagePublisher() {}
 
     public boolean isOnlyForFailure() {
         return onlyForFailure;
@@ -165,8 +181,14 @@ public class GitLabMessagePublisher extends MergeRequestNotifier {
                 client.createMergeRequestNote(mergeRequest, getNote(build, listener));
             }
         } catch (WebApplicationException | ProcessingException e) {
-            listener.getLogger().printf("Failed to add comment on Merge Request for project '%s': %s%n", mergeRequest.getProjectId(), e.getMessage());
-            LOGGER.log(Level.SEVERE, String.format("Failed to add comment on Merge Request for project '%s'", mergeRequest.getProjectId()), e);
+            listener.getLogger()
+                    .printf(
+                            "Failed to add comment on Merge Request for project '%s': %s%n",
+                            mergeRequest.getProjectId(), e.getMessage());
+            LOGGER.log(
+                    Level.SEVERE,
+                    "Failed to add comment on Merge Request for project '%s'".formatted(mergeRequest.getProjectId()),
+                    e);
         }
     }
 
@@ -178,7 +200,7 @@ public class GitLabMessagePublisher extends MergeRequestNotifier {
         } else if (result == Result.UNSTABLE) {
             return ":warning:";
         } else {
-            return ":negative_squared_cross_mark:";
+            return ":x:";
         }
     }
 
@@ -223,9 +245,14 @@ public class GitLabMessagePublisher extends MergeRequestNotifier {
             message = replaceMacros(build, listener, this.getFailureNoteText());
         } else {
             String icon = getResultIcon(build.getResult());
-            String buildUrl = Jenkins.getInstance().getRootUrl() + build.getUrl();
-            message = MessageFormat.format("{0} Jenkins Build {1}\n\nResults available at: [Jenkins [{2} #{3}]]({4})",
-                                           icon, build.getResult().toString(), build.getParent().getDisplayName(), build.getNumber(), buildUrl);
+            String buildUrl = Objects.requireNonNull(Jenkins.getInstance()).getRootUrl() + build.getUrl();
+            message = MessageFormat.format(
+                    "{0} Jenkins Build {1}\n\nResults available at: [Jenkins [{2} #{3}]]({4})",
+                    icon,
+                    Objects.requireNonNull(build.getResult()).toString(),
+                    build.getParent().getDisplayName(),
+                    build.getNumber(),
+                    buildUrl);
         }
         return message;
     }
