@@ -1,5 +1,19 @@
 package com.dabsquared.gitlabjenkins.publisher;
 
+import static com.dabsquared.gitlabjenkins.publisher.TestUtility.BUILD_URL;
+import static com.dabsquared.gitlabjenkins.publisher.TestUtility.GITLAB_CONNECTION_V3;
+import static com.dabsquared.gitlabjenkins.publisher.TestUtility.GITLAB_CONNECTION_V4;
+import static com.dabsquared.gitlabjenkins.publisher.TestUtility.PROJECT_ID;
+import static com.dabsquared.gitlabjenkins.publisher.TestUtility.setupGitLabConnections;
+import static com.dabsquared.gitlabjenkins.publisher.TestUtility.verifyMatrixAggregatable;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
+import static org.mockserver.model.HttpRequest.request;
+import static org.mockserver.model.HttpResponse.response;
 
 import com.dabsquared.gitlabjenkins.connection.GitLabConnectionProperty;
 import com.dabsquared.gitlabjenkins.gitlab.api.model.BuildState;
@@ -14,91 +28,75 @@ import hudson.model.TaskListener;
 import hudson.plugins.git.Revision;
 import hudson.plugins.git.util.Build;
 import hudson.plugins.git.util.BuildData;
-import jenkins.plugins.git.AbstractGitSCMSource;
-import jenkins.scm.api.SCMRevisionAction;
-import org.apache.commons.io.IOUtils;
-import org.eclipse.jgit.lib.ObjectId;
-import org.hamcrest.CoreMatchers;
-import org.jenkinsci.plugins.displayurlapi.DisplayURLProvider;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.ClassRule;
-import org.junit.Test;
-import org.jvnet.hudson.test.JenkinsRule;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
-import org.mockserver.client.server.MockServerClient;
-import org.mockserver.junit.MockServerRule;
-import org.mockserver.model.HttpRequest;
-import org.mockserver.model.HttpResponse;
-import org.mockserver.verify.VerificationTimes;
-
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-
-import static com.dabsquared.gitlabjenkins.publisher.TestUtility.BUILD_URL;
-import static com.dabsquared.gitlabjenkins.publisher.TestUtility.GITLAB_CONNECTION_V3;
-import static com.dabsquared.gitlabjenkins.publisher.TestUtility.GITLAB_CONNECTION_V4;
-import static com.dabsquared.gitlabjenkins.publisher.TestUtility.PROJECT_ID;
-import static com.dabsquared.gitlabjenkins.publisher.TestUtility.setupGitLabConnections;
-import static com.dabsquared.gitlabjenkins.publisher.TestUtility.verifyMatrixAggregatable;
-import static org.junit.Assert.assertThat;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyString;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
-import static org.mockserver.model.HttpRequest.request;
-import static org.mockserver.model.HttpResponse.response;
+import jenkins.plugins.git.AbstractGitSCMSource;
+import jenkins.scm.api.SCMRevisionAction;
+import org.apache.commons.io.IOUtils;
+import org.eclipse.jgit.lib.ObjectId;
+import org.hamcrest.CoreMatchers;
+import org.jenkinsci.plugins.displayurlapi.DisplayURLProvider;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.jvnet.hudson.test.JenkinsRule;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
+import org.mockito.stubbing.Answer;
+import org.mockserver.client.MockServerClient;
+import org.mockserver.junit.jupiter.MockServerExtension;
+import org.mockserver.model.HttpRequest;
+import org.mockserver.model.HttpResponse;
+import org.mockserver.verify.VerificationTimes;
 
 /**
  * @author Robin Müller
  */
-public class GitLabCommitStatusPublisherTest {
+@WithJenkins
+@ExtendWith(MockServerExtension.class)
+class GitLabCommitStatusPublisherTest {
     private static final String SHA1 = "0616d12a3a24068691027a1e113147e3c1cfa2f4";
 
-    @ClassRule
-    public static MockServerRule mockServer = new MockServerRule(new Object());
+    private static JenkinsRule jenkins;
 
-    @ClassRule
-    public static JenkinsRule jenkins = new JenkinsRule();
-
-    private MockServerClient mockServerClient;
+    private static MockServerClient mockServerClient;
     private BuildListener listener;
 
-    @BeforeClass
-    public static void setupClass() throws IOException {
-        setupGitLabConnections(jenkins, mockServer);
+    @BeforeAll
+    static void setUp(JenkinsRule rule, MockServerClient client) throws Exception {
+        jenkins = rule;
+        mockServerClient = client;
+        setupGitLabConnections(jenkins, client);
     }
 
-    @Before
-    public void setup() {
+    @BeforeEach
+    void setUp() {
         listener = new StreamBuildListener(jenkins.createTaskListener().getLogger(), Charset.defaultCharset());
-        mockServerClient = new MockServerClient("localhost", mockServer.getPort());
     }
 
-    @After
-    public void cleanup() {
+    @AfterEach
+    void tearDown() {
         mockServerClient.reset();
     }
 
     @Test
-    public void matrixAggregatable() throws InterruptedException, IOException {
+    void matrixAggregatable() throws Exception {
         verifyMatrixAggregatable(GitLabCommitStatusPublisher.class, listener);
     }
 
     @Test
-    public void running_v3() throws UnsupportedEncodingException {
+    void running_v3() {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V3, null, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v3", build, BuildState.running);
 
@@ -106,25 +104,23 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void running_v4() throws UnsupportedEncodingException {
+    void running_v4() {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.running);
 
         prebuildAndVerify(build, listener, requests);
     }
 
-
     @Test
-    public void runningWithLibrary() throws UnsupportedEncodingException {
+    void runningWithLibrary() {
         AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, null, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.running);
 
         prebuildAndVerify(build, listener, requests);
     }
 
-
     @Test
-    public void runningWithDotInProjectId() throws IOException {
+    void runningWithDotInProjectId() throws Exception {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.test.git");
         HttpRequest[] requests = new HttpRequest[] {
             prepareGetProjectResponse("test/project.test"),
@@ -136,7 +132,7 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void canceled_v3() throws IOException, InterruptedException {
+    void canceled_v3() throws Exception {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V3, Result.ABORTED, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v3", build, BuildState.canceled);
 
@@ -144,7 +140,7 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void canceled_v4() throws IOException, InterruptedException {
+    void canceled_v4() throws Exception {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, Result.ABORTED, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.canceled);
 
@@ -152,7 +148,7 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void canceledWithLibrary() throws IOException, InterruptedException {
+    void canceledWithLibrary() throws Exception {
         AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.ABORTED, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.canceled);
 
@@ -160,16 +156,15 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void success_v3() throws IOException, InterruptedException {
+    void success_v3() throws Exception {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V3, Result.SUCCESS, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v3", build, BuildState.success);
 
         performAndVerify(build, false, requests);
     }
 
-
     @Test
-    public void success_v4() throws IOException, InterruptedException {
+    void success_v4() throws Exception {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, Result.SUCCESS, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.success);
 
@@ -177,15 +172,15 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void successWithLibrary() throws IOException, InterruptedException {
+    void successWithLibrary() throws Exception {
         AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.SUCCESS, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.success);
 
         performAndVerify(build, false, requests);
     }
-    
+
     @Test
-    public void failed_v3() throws IOException, InterruptedException {
+    void failed_v3() throws Exception {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V3, Result.FAILURE, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v3", build, BuildState.failed);
 
@@ -193,7 +188,7 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void failed_v4() throws IOException, InterruptedException {
+    void failed_v4() throws Exception {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V3, Result.FAILURE, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v3", build, BuildState.failed);
 
@@ -201,15 +196,15 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void failedWithLibrary() throws IOException, InterruptedException {
+    void failedWithLibrary() throws Exception {
         AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.FAILURE, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.failed);
 
         performAndVerify(build, false, requests);
     }
-    
+
     @Test
-    public void unstable() throws IOException, InterruptedException {
+    void unstable() throws Exception {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, Result.UNSTABLE, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.failed);
 
@@ -217,15 +212,15 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void unstableWithLibrary() throws IOException, InterruptedException {
+    void unstableWithLibrary() throws Exception {
         AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.UNSTABLE, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.failed);
 
         performAndVerify(build, false, requests);
     }
-    
+
     @Test
-    public void unstableAsSuccess() throws IOException, InterruptedException {
+    void unstableAsSuccess() throws Exception {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, Result.UNSTABLE, "test/project.git");
         HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("v4", build, BuildState.success);
 
@@ -233,7 +228,7 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void running_multipleRepos() throws UnsupportedEncodingException {
+    void running_multipleRepos() {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project-1.git", "test/project-2.git");
         HttpRequest[] requests = new HttpRequest[] {
             prepareExistsCommitWithSuccessResponse("v4", "test/project-1"),
@@ -246,16 +241,17 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     @Test
-    public void running_commitNotExists() throws UnsupportedEncodingException {
+    void running_commitNotExists() {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.git");
-        HttpRequest updateCommitStatus = prepareUpdateCommitStatusWithSuccessResponse("v4", "test/project", build, BuildState.running);
+        HttpRequest updateCommitStatus =
+                prepareUpdateCommitStatusWithSuccessResponse("v4", "test/project", build, BuildState.running);
 
         new GitLabCommitStatusPublisher("jenkins", false).prebuild(build, listener);
         mockServerClient.verify(updateCommitStatus, VerificationTimes.exactly(0));
     }
 
     @Test
-    public void running_failToUpdate() throws UnsupportedEncodingException {
+    void running_failToUpdate() {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.git");
         BuildListener buildListener = mock(BuildListener.class);
 
@@ -267,7 +263,10 @@ public class GitLabCommitStatusPublisherTest {
         mockServerClient.when(updateCommitStatus).respond(response().withStatusCode(403));
 
         prebuildAndVerify(build, buildListener, updateCommitStatus);
-        assertThat(outputStream.toString(), CoreMatchers.containsString("Failed to update Gitlab commit status for project 'test/project': HTTP 403 Forbidden"));
+        assertThat(
+                outputStream.toString(),
+                CoreMatchers.containsString(
+                        "Failed to update GitLab commit status for project 'test/project': HTTP 403 Forbidden"));
     }
 
     private void prebuildAndVerify(AbstractBuild build, BuildListener listener, HttpRequest... requests) {
@@ -275,53 +274,63 @@ public class GitLabCommitStatusPublisherTest {
         mockServerClient.verify(requests);
     }
 
-    private void performAndVerify(AbstractBuild build, boolean markUnstableAsSuccess, HttpRequest... requests) throws InterruptedException, IOException {
+    private void performAndVerify(AbstractBuild build, boolean markUnstableAsSuccess, HttpRequest... requests)
+            throws Exception {
         new GitLabCommitStatusPublisher("jenkins", markUnstableAsSuccess).perform(build, null, listener);
         mockServerClient.verify(requests);
     }
 
-    private HttpRequest[] prepareCheckCommitAndUpdateStatusRequests(String apiLevel, Run<?, ?> build, BuildState buildState) throws UnsupportedEncodingException {
+    private HttpRequest[] prepareCheckCommitAndUpdateStatusRequests(
+            String apiLevel, Run<?, ?> build, BuildState buildState) {
         return new HttpRequest[] {
             prepareExistsCommitWithSuccessResponse(apiLevel, "test/project"),
             prepareUpdateCommitStatusWithSuccessResponse(apiLevel, "test/project", build, buildState)
         };
     }
 
-    private HttpRequest prepareUpdateCommitStatusWithSuccessResponse(String apiLevel, String projectName, Run<?, ?> build, BuildState state) throws UnsupportedEncodingException {
+    private HttpRequest prepareUpdateCommitStatusWithSuccessResponse(
+            String apiLevel, String projectName, Run<?, ?> build, BuildState state) {
         HttpRequest updateCommitStatus = prepareUpdateCommitStatus(apiLevel, projectName, build, state);
         mockServerClient.when(updateCommitStatus).respond(response().withStatusCode(200));
         return updateCommitStatus;
     }
 
-
-    private HttpRequest prepareUpdateCommitStatus(final String apiLevel, String projectName, Run<?, ?> build, BuildState state) throws UnsupportedEncodingException {
+    private HttpRequest prepareUpdateCommitStatus(
+            final String apiLevel, String projectName, Run<?, ?> build, BuildState state) {
         return request()
-                .withPath("/gitlab/api/" + apiLevel + "/projects/" + URLEncoder.encode(projectName, "UTF-8") + "/statuses/" + SHA1)
+                .withPath("/gitlab/api/" + apiLevel + "/projects/"
+                        + URLEncoder.encode(projectName, StandardCharsets.UTF_8) + "/statuses/" + SHA1)
                 .withMethod("POST")
                 .withHeader("PRIVATE-TOKEN", "secret")
-                .withBody("state=" + URLEncoder.encode(state.name(), "UTF-8") + "&context=jenkins&" + "target_url=" + URLEncoder.encode(DisplayURLProvider.get().getRunURL(build), "UTF-8") + "&description=" + URLEncoder.encode(state.name(), "UTF-8"));
+                .withBody("state=" + URLEncoder.encode(state.name(), StandardCharsets.UTF_8) + "&context=jenkins&"
+                        + "target_url="
+                        + URLEncoder.encode(DisplayURLProvider.get().getRunURL(build), StandardCharsets.UTF_8)
+                        + "&description="
+                        + URLEncoder.encode(state.name(), StandardCharsets.UTF_8));
     }
 
-    private HttpRequest prepareExistsCommitWithSuccessResponse(String apiLevel, String projectName) throws UnsupportedEncodingException {
+    private HttpRequest prepareExistsCommitWithSuccessResponse(String apiLevel, String projectName) {
         HttpRequest existsCommit = prepareExistsCommit(apiLevel, projectName);
         mockServerClient.when(existsCommit).respond(response().withStatusCode(200));
         return existsCommit;
     }
 
-    private HttpRequest prepareExistsCommit(String apiLevel, String projectName) throws UnsupportedEncodingException {
+    private HttpRequest prepareExistsCommit(String apiLevel, String projectName) {
         return request()
-                .withPath("/gitlab/api/" + apiLevel + "/projects/" + URLEncoder.encode(projectName, "UTF-8") + "/repository/commits/" + SHA1)
+                .withPath("/gitlab/api/" + apiLevel + "/projects/"
+                        + URLEncoder.encode(projectName, StandardCharsets.UTF_8) + "/repository/commits/" + SHA1)
                 .withMethod("GET")
                 .withHeader("PRIVATE-TOKEN", "secret");
     }
 
-    private HttpRequest prepareGetProjectResponse(String projectName) throws IOException {
-        HttpRequest request= request()
-                     .withPath("/gitlab/api/v4/projects/" + URLEncoder.encode(projectName, "UTF-8"))
-                     .withMethod("GET")
-                     .withHeader("PRIVATE-TOKEN", "secret");
+    private HttpRequest prepareGetProjectResponse(String projectName) throws Exception {
+        HttpRequest request = request()
+                .withPath("/gitlab/api/v4/projects/" + URLEncoder.encode(projectName, StandardCharsets.UTF_8))
+                .withMethod("GET")
+                .withHeader("PRIVATE-TOKEN", "secret");
 
-        HttpResponse response = response().withBody(getSingleProjectJson("GetSingleProject.json", projectName, PROJECT_ID));
+        HttpResponse response =
+                response().withBody(getSingleProjectJson("GetSingleProject.json", projectName, PROJECT_ID));
 
         response.withHeader("Content-Type", "application/json");
         mockServerClient.when(request).respond(response.withStatusCode(200));
@@ -333,6 +342,7 @@ public class GitLabCommitStatusPublisherTest {
         List<BuildData> buildDatas = new ArrayList<>();
         BuildData buildData = mock(BuildData.class);
         Revision revision = mock(Revision.class);
+        when(revision.getSha1()).thenReturn(ObjectId.fromString(SHA1));
         when(revision.getSha1String()).thenReturn(SHA1);
         when(buildData.getLastBuiltRevision()).thenReturn(revision);
         when(buildData.getRemoteUrls()).thenReturn(new HashSet<>(Arrays.asList(remoteUrls)));
@@ -345,15 +355,13 @@ public class GitLabCommitStatusPublisherTest {
         when(build.getResult()).thenReturn(result);
         when(build.getUrl()).thenReturn(BUILD_URL);
         AbstractProject<?, ?> project = mock(AbstractProject.class);
-        when(project.getProperty(GitLabConnectionProperty.class)).thenReturn(new GitLabConnectionProperty(gitLabConnection));
-        when(build.getProject()).thenReturn(project);
+        when(project.getProperty(GitLabConnectionProperty.class))
+                .thenReturn(new GitLabConnectionProperty(gitLabConnection));
+        doReturn(project).when(build).getParent();
+        doReturn(project).when(build).getProject();
         EnvVars environment = mock(EnvVars.class);
-        when(environment.expand(anyString())).thenAnswer(new Answer<String>() {
-            @Override
-            public String answer(InvocationOnMock invocation) throws Throwable {
-                return (String) invocation.getArguments()[0];
-            }
-        });
+        when(environment.expand(anyString()))
+                .thenAnswer((Answer<String>) invocation -> (String) invocation.getArguments()[0]);
         try {
             when(build.getEnvironment(any(TaskListener.class))).thenReturn(environment);
         } catch (IOException | InterruptedException e) {
@@ -368,11 +376,11 @@ public class GitLabCommitStatusPublisherTest {
         BuildData buildData = mock(BuildData.class);
         SCMRevisionAction scmRevisionAction = mock(SCMRevisionAction.class);
         AbstractGitSCMSource.SCMRevisionImpl revisionImpl = mock(AbstractGitSCMSource.SCMRevisionImpl.class);
-        
+
         when(build.getAction(SCMRevisionAction.class)).thenReturn(scmRevisionAction);
         when(scmRevisionAction.getRevision()).thenReturn(revisionImpl);
         when(revisionImpl.getHash()).thenReturn(SHA1);
-        
+
         Revision revision = mock(Revision.class);
         when(revision.getSha1String()).thenReturn(SHA1);
         when(buildData.getLastBuiltRevision()).thenReturn(revision);
@@ -387,8 +395,8 @@ public class GitLabCommitStatusPublisherTest {
         buildsByBranchName.put("develop", gitBuild);
         when(buildData.getBuildsByBranchName()).thenReturn(buildsByBranchName);
         buildDatas.add(buildData);
-        
-        //Second build data (@librabry)
+
+        // Second build data (@librabry)
         BuildData buildDataLib = mock(BuildData.class);
         Revision revisionLib = mock(Revision.class);
         when(revisionLib.getSha1String()).thenReturn("SHALIB");
@@ -397,21 +405,19 @@ public class GitLabCommitStatusPublisherTest {
         when(gitBuildLib.getMarked()).thenReturn(revisionLib);
         when(buildDataLib.getLastBuild(any(ObjectId.class))).thenReturn(gitBuildLib);
         buildDatas.add(buildDataLib);
-        
+
         when(build.getActions(BuildData.class)).thenReturn(buildDatas);
         when(build.getResult()).thenReturn(result);
         when(build.getUrl()).thenReturn(BUILD_URL);
 
         AbstractProject<?, ?> project = mock(AbstractProject.class);
-        when(project.getProperty(GitLabConnectionProperty.class)).thenReturn(new GitLabConnectionProperty(gitLabConnection));
-        when(build.getProject()).thenReturn(project);
+        when(project.getProperty(GitLabConnectionProperty.class))
+                .thenReturn(new GitLabConnectionProperty(gitLabConnection));
+        doReturn(project).when(build).getParent();
+        doReturn(project).when(build).getProject();
         EnvVars environment = mock(EnvVars.class);
-        when(environment.expand(anyString())).thenAnswer(new Answer<String>() {
-            @Override
-            public String answer(InvocationOnMock invocation) throws Throwable {
-                return (String) invocation.getArguments()[0];
-            }
-        });
+        when(environment.expand(anyString()))
+                .thenAnswer((Answer<String>) invocation -> (String) invocation.getArguments()[0]);
         try {
             when(build.getEnvironment(any(TaskListener.class))).thenReturn(environment);
         } catch (IOException | InterruptedException e) {
@@ -420,12 +426,12 @@ public class GitLabCommitStatusPublisherTest {
         return build;
     }
 
-    private String getSingleProjectJson(String name,String projectNameWithNamespace, int projectId) throws IOException {
+    private String getSingleProjectJson(String name, String projectNameWithNamespace, int projectId) throws Exception {
         String nameSpace = projectNameWithNamespace.split("/")[0];
         String projectName = projectNameWithNamespace.split("/")[1];
-        return IOUtils.toString(getClass().getResourceAsStream(name))
-                 .replace("${projectId}", projectId + "")
-                 .replace("${nameSpace}", nameSpace)
-                 .replace("${projectName}", projectName);
+        return IOUtils.toString(getClass().getResourceAsStream(name), StandardCharsets.UTF_8)
+                .replace("${projectId}", projectId + "")
+                .replace("${nameSpace}", nameSpace)
+                .replace("${projectName}", projectName);
     }
 }
